--- a/financial-advisor.html
+++ b/financial-advisor.html
@@ -169,46 +169,40 @@
 
 <body class="my-login-page">
   <header>
-    <nav class="navbar nav flex-row">
-      <div class="nav-menu">
-        <div class="nav-brand">
-          <img class="logo" src="./assets/images/logo.png" alt="Logo">
-        </div>
-      </div>
-      <div class="toggle-collapse">
-        <div class="toggle-icons text-black">
-          <!--<span><i class="fas fa-bars"></i></span>-->
-          <span class="icon"></span>
+    <nav class="navbar">
+      <div class="navbrand">
+<img src="./assets/images/logo.png" alt="Logo">    
+    <div class="burger" id="burger">
+          <span class="burger-open">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="16">
+              <g fill="#252a32" fill-rule="evenodd">
+                <path d="M0 0h24v2H0zM0 7h24v2H0zM0 14h24v2H0z" />
+              </g>
+            </svg>
+          </span>
+          <span class="burger-close">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+              <path fill="#252a32" fill-rule="evenodd" d="M17.778.808l1.414 1.414L11.414 10l7.778 7.778-1.414 1.414L10 11.414l-7.778 7.778-1.414-1.414L8.586 10 .808 2.222 2.222.808 10 8.586 17.778.808z" />
+            </svg>
+          </span>
         </div>
       </div>
       <div>
-        <ul class="nav-items flex-row">
-          <li class="nav-link">
-            <a href="#" class="text-black">About</a>
-          </li>
-          <li class="nav-link">
-            <a href="#" class="text-black">More on us</a>
-          </li>
-          <li class="nav-link">
-            <a href="#" class="text-black">How it works</a>
-          </li>
-
-        </ul>
+          <ul class="menu" id="menu">
+              <li class="menu-item"><a href="#about-us" class="menu-link">About</a></li>
+              <li class="menu-item"><a href="#time-l" class="menu-link">How it is works</a></li>
+              <li class="menu-item"><a href="#moreonus" class="menu-link">Our why </a></li>
+              <li class="menu-item first"><a href="./signin.html" style="color: #162C9B;" class="menu-link">Sign in</a></li>
+              <li class="menu-item first"><a  style="padding-left: 15px!important;" href="registration.html" class="signup">Sign up</a></li>
+            </ul>
       </div>
-      <div>
-        <ul class="nav-items flex-row">
-
-          <li class="nav-link " class="mobile-sign" style="padding: 1.3rem 1rem;">
-            <b> <a style="font-weight: 700;" href="./signin.html" class="sign">Sign in</a></b>
-          </li>
-          <li class="nav-link" class="mobile-sign" style="padding: 1.3rem 1rem;">
-            <b> <a href="./registration.html" class="sign">Sign up</a> </b>
-          </li>
-
-        </ul>
-
+      
+      <div class="second">
+         <a class="sign" href="signin.html">Sign in</a>
+     <a class="signup"  href="registration.html">Sign up</a>
       </div>
     </nav>
+  </nav>
 
   </header>
   <section id="cover" class="min-vh-100">
@@ -216,7 +210,7 @@
       <div class="container">
         <div class="row text-white">
           <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
-            <h1 class="display-4 py-2 text-truncate">Sign In</h1>
+            <h1 class="display-4 py-2 ">Financial Advisor</h1>
             <div class="px-2">
               <form action="POST" class="justify-content-center" class="my-login-validation" novalidate="">
                 <div class="form-group">
@@ -288,7 +282,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="customRange2" class="form-label">Your salary range*</label>
+                  <label for="customRange2" class="form-label">Budget range*</label>
                   <div class="range">
                     <div class="sliderValue">
                       <!-- <span style="color: black;">100</span> -->
@@ -386,23 +380,33 @@
     </div>
   </section> -->
   <!-- Footer Start -->
-  <footer style="margin-top: 709px;">
-    <div>
-      <ul class="footer-list">
-        <li> <a href="#">About Us</a> </li>
-        <li> <a href="#">More on us</a> </li>
-        <li> <a href="#">How it works</a> </li>
-      </ul>
+  <footer style="margin-top: 850px;">
+    <div style="display: flex; justify-content: space-between; margin: auto; max-width: 1120px; width: 100%;">
+      <div >
+        <ul class="footer-list">
+          <li> <a href="index.html">About Us</a> </li>
+          <li> <a href="index.html">More on us</a> </li>
+          <li> <a href="index.html">How it works</a> </li>
+        </ul>
+      </div>
+      <div>
+        <p id="all-rights">© All Rights 2021</p>
+      </div>
     </div>
-    <div>
-      <p id="all-rights">© All Rights 2021</p>
-    </div>
+  
   </footer>
   <!--  Footer End -->
 
-  <!--  Footer End -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> 
   <script>
+          const burgerMenu = document.getElementById("burger");
+const navbarMenu = document.getElementById("menu");
 
+// Responsive Navbar Toggle
+burgerMenu.addEventListener("click", function () {
+  navbarMenu.classList.toggle("active");
+  burgerMenu.classList.toggle("active");
+});
     function isOlderEdgeOrIE() {
       return (
         window.navigator.userAgent.indexOf("MSIE ") > -1 ||
