--- a/profile.html
+++ b/profile.html
@@ -196,7 +196,7 @@
         </ul>
       </div>
       <div>
-        <button class="profile-img"><img width="24px" height="24px" style="margin-right: 11px;"
+        <button class="profile-img"><img width="24px" height="24px" style="margin-right: 11px;float: left;"
             src="./assets/images/user.png" alt="">Yagub Mehdiyev</button>
 
       </div>
@@ -244,8 +244,8 @@
                   </div>
                 </div>
 
-                <div><label for="sel1">Region*</label>
-                  <select class="form-control" id="sel1" aria-placeholder="Region">
+                <div><label for="sel1">State*</label>
+                  <select class="form-control" id="sel1" aria-placeholder="State">
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -280,35 +280,9 @@
                     Your Occupation is invalid
                   </div>
                 </div>
-                <div class="form-group">
-                  <label for="customRange2" class="form-label">Your salary range*</label>
-                  <div class="range">
-                    <div class="sliderValue">
-                      <!-- <span style="color: black;">100</span> -->
-                    </div>
-                    <div class="field">
-                      <div>
-                        <p class="value left">0</p>
-                      </div>
-                      <div> <input style="float: left; align-items: center;margin-left: 40px; margin-right: 40px;" type="range" value="60000" min="0"
-                          max="100000" id="myRange" step="1" />
-                        steps="1"></div>
-                      <div>
-                        <p class="value right" style="margin-left:0px "> 100000</p>
-                      </div>
+              
 
-
-
-
-
-                    </div>
-                    <p style="text-align: center; color: #162c9b!important; font-weight: bold;"> <span id="demo"></span>
-                    </p>
-
-                  </div>
-                </div>
-
-                <div class="form-group"><label for="sel1">Region*</label>
+                <div class="form-group"><label for="sel1">State*</label>
                   <select class="form-control" id="sel1">
                     <option>1</option>
                     <option>2</option>
@@ -320,14 +294,16 @@
                 <div class="form-group">
                   <label for="phone">Enter your phone number:</label> <br>
                   <img id="usa" src="./assets/images/US.png" alt="USA">
-                  <p class="numb-1">+1 </p> <input id="phone-number" type="tel" placeholder="012 345 678 910"
+                  <p class="numb-1">+1 </p> <input id="phone-number" type="tel" placeholder=" 345 678 2910"
                     class="form-control" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
                 </div>
 
                 <div class="form-group" id="buttons">
-                  <p style="color: #595959; text-align: left;">Profile Picture</p> <span
+                  <p style="color: #595959; text-align: left;">Profile Picture</p> 
+                  <div class="image"> <img  id="profileImage" src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80" class="rounded" width="51"> </div>
+                  <span
                     class=" btn btn-primary btn-file upload">
-                    Add photo<input type="file">
+                    Add photo<input id="imageUpload" type="file">
 
                   </span>
                   <a href="" class="btn" id="delete" style="color: white;"> Delete</a>
@@ -337,6 +313,12 @@
                 <div class="form-group m-0">
                   <button class="save-btn btn  btn-primary btn-block">
                     Save
+                  </button>
+                </div>
+                <hr>
+                <div class="form-group m-0">
+                  <button style="border: none!important;" class="save-btn btn  btn-primary btn-block">
+                    Sign out
                   </button>
                 </div>
 
@@ -379,22 +361,47 @@
     </div>
   </section> -->
   <!-- Footer Start -->
-  <footer style="margin-top: 709px;">
-    <div>
-      <ul class="footer-list">
-        <li> <a href="#">About Us</a> </li>
-        <li> <a href="#">More on us</a> </li>
-        <li> <a href="#">How it works</a> </li>
-      </ul>
+  <footer style="margin-top: 900px;">
+    <div style="display: flex; justify-content: space-between; margin: auto; max-width: 1120px; width: 100%;">
+      <div >
+        <ul class="footer-list">
+          <li> <a href="index.html">About Us</a> </li>
+          <li> <a href="index.html">More on us</a> </li>
+          <li> <a href="index.html">How it works</a> </li>
+        </ul>
+      </div>
+      <div>
+        <p id="all-rights">© All Rights 2021</p>
+      </div>
     </div>
-    <div>
-      <p id="all-rights">© All Rights 2021</p>
-    </div>
+  
   </footer>
   <!--  Footer End -->
 
-  <!--  Footer End -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> 
   <script>
+            const burgerMenu = document.getElementById("burger");
+const navbarMenu = document.getElementById("menu");
+
+// Responsive Navbar Toggle
+burgerMenu.addEventListener("click", function () {
+  navbarMenu.classList.toggle("active");
+  burgerMenu.classList.toggle("active");
+});
+$("#profileImage").click(function(e) {
+    $("#imageUpload").click();
+});
+
+function fasterPreview( uploader ) {
+    if ( uploader.files && uploader.files[0] ){
+          $('#profileImage').attr('src', 
+             window.URL.createObjectURL(uploader.files[0]) );
+    }
+}
+
+$("#imageUpload").change(function(){
+    fasterPreview( this );
+});
 
     function isOlderEdgeOrIE() {
       return (
