--- a/registration.html
+++ b/registration.html
@@ -17,48 +17,42 @@
 
 <body class="my-login-page">
     <header>
-        <nav class="nav flex-row">
-            <div class="nav-menu">
-                <div class="nav-brand">
-                    <img class="logo" src="./assets/images/logo.png" alt="Logo">
-                </div>
+        <nav class="navbar">
+          <div class="navbrand">
+    <img src="./assets/images/logo.png" alt="Logo">    
+        <div class="burger" id="burger">
+              <span class="burger-open">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="16">
+                  <g fill="#252a32" fill-rule="evenodd">
+                    <path d="M0 0h24v2H0zM0 7h24v2H0zM0 14h24v2H0z" />
+                  </g>
+                </svg>
+              </span>
+              <span class="burger-close">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                  <path fill="#252a32" fill-rule="evenodd" d="M17.778.808l1.414 1.414L11.414 10l7.778 7.778-1.414 1.414L10 11.414l-7.778 7.778-1.414-1.414L8.586 10 .808 2.222 2.222.808 10 8.586 17.778.808z" />
+                </svg>
+              </span>
             </div>
-            <div class="toggle-collapse">
-                <div class="toggle-icons text-black">
-                    <!--<span><i class="fas fa-bars"></i></span>-->
-                    <span class="icon"></span>
-                </div>
-            </div>
-            <div>
-                <ul class="nav-items flex-row">
-                    <li class="nav-link">
-                        <a href="#" class="text-black">About</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#" class="text-black">More on us</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#" class="text-black">How it works</a>
-                    </li>
-
+          </div>
+          <div>
+              <ul class="menu" id="menu">
+                  <li class="menu-item"><a href="#about-us" class="menu-link">About</a></li>
+                  <li class="menu-item"><a href="#time-l" class="menu-link">How it is works</a></li>
+                  <li class="menu-item"><a href="#moreonus" class="menu-link">Our why </a></li>
+                  <li class="menu-item first"><a href="./signin.html" style="color: #162C9B;" class="menu-link">Sign in</a></li>
+                  <li class="menu-item first"><a  style="padding-left: 15px!important;" href="registration.html" class="signup">Sign up</a></li>
                 </ul>
-            </div>
-            <div>
-                <ul class="nav-items flex-row">
-
-                    <li class="nav-link " class="mobile-sign" style="padding: 1.3rem 1rem;">
-                        <b> <a style="font-weight: 700;" href="#" class="sign">Sign in</a></b>
-                    </li>
-                    <li class="nav-link" class="mobile-sign" style="padding: 1.3rem 1rem;">
-                        <b> <a href="#" class="sign">Sign up</a> </b>
-                    </li>
-
-                </ul>
-
-            </div>
+          </div>
+          
+          <div class="second">
+             <a class="sign" href="signin.html">Sign in</a>
+         <a class="signup"  href="registration.html">Sign up</a>
+          </div>
         </nav>
-
-    </header>
+      </nav>
+    
+      </header>
     <section class="signin-section">
         <div class="container ">
             <div class="row justify-content-md-center">
@@ -105,6 +99,20 @@
         </footer>
         <!--  Footer End -->
     <!--  Footer End -->
+
+    <script>
+               const burgerMenu = document.getElementById("burger");
+const navbarMenu = document.getElementById("menu");
+
+// Responsive Navbar Toggle
+burgerMenu.addEventListener("click", function () {
+  navbarMenu.classList.toggle("active");
+  burgerMenu.classList.toggle("active");
+});
+$("#profileImage").click(function(e) {
+    $("#imageUpload").click();
+});
+    </script>
 <script src="./assets/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
