--- a/test-nav3.html
+++ b/test-nav3.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+ <link rel="stylesheet" href="./assets/css/global.css">
 <style>
+	.first{
+		display: none;
+	}
+	@media only screen and (max-width:768px){
+		.first{
+			display: block;
+		}
+		.second{
+			display: none;
+		}
+	}
     *, *::before, *::after {
 	 padding: 0;
 	 margin: 0;
@@ -28,7 +39,7 @@
 }
  img {
 	 display: block;
-	 width: 100%;
+	
 	 height: auto;
 }
  a, button {
@@ -62,8 +73,7 @@
 	 height: auto;
 	 padding: 1rem 2rem;
 	 color: #252a32;
-	 background: #fff;
-	 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+	 background: #fff5f2;
 }
  @media only screen and (min-width: 768px) {
 	 .navbar {
@@ -116,8 +126,8 @@
 }
  .navbar .menu-link {
 	 font-family: inherit;
-	 font-size: 1rem;
-	 font-weight: 500;
+	 font-size: 14px;
+	 font-weight: 600;
 	 line-height: inherit;
 	 color: #252a32;
 	 text-transform: uppercase;
@@ -129,7 +139,7 @@
 }
  .navbar .menu.active {
 	 width: 100%;
-	 height: 10rem;
+	 height: 12rem;
 	 margin: 1rem 0;
 }
  @media only screen and (min-width: 768px) {
@@ -173,8 +183,8 @@
     
     <nav class="navbar">
         <div class="navbrand">
-          <h1><a href="./index.html" class="brand">Brand</a></h1>
-          <div class="burger" id="burger">
+<img src="./assets/images/logo.png" alt="Logo">    
+      <div class="burger" id="burger">
             <span class="burger-open">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="16">
                 <g fill="#252a32" fill-rule="evenodd">
@@ -191,22 +201,17 @@
         </div>
         <div>
             <ul class="menu" id="menu">
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
+                <li class="menu-item"><a href="#" class="menu-link">About</a></li>
+                <li class="menu-item"><a href="#" class="menu-link">How it is works</a></li>
+                <li class="menu-item"><a href="#" class="menu-link">Our why </a></li>
+                <li class="menu-item first"><a href="#" style="color: #162C9B;" class="menu-link">Sign in</a></li>
+                <li class="menu-item first"><a  style="padding-left: 15px!important;"href="#" class="signup">Sign up</a></li>
               </ul>
         </div>
         
-        <div class="">
-            <ul class="menu" id="menu">
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
-                <li class="menu-item"><a href="#" class="menu-link">Menu</a></li>
-              </ul>
+        <div class="second">
+           <a class="sign" href="signin.html">Sign in</a>
+		   <a class="signup"  href="registration.html">Sign up</a>
         </div>
       </nav>
 
