--- a/table.html
+++ b/table.html
@@ -81,9 +81,9 @@
           </div>
           <div>
               <ul class="menu" id="menu">
-                  <li class="menu-item"><a href="#about-us" class="menu-link">About</a></li>
-                  <li class="menu-item"><a href="#time-l" class="menu-link">How it is works</a></li>
-                  <li class="menu-item"><a href="#moreonus" class="menu-link">Our why </a></li>
+                  <li class="menu-item"><a href="index.html" class="menu-link">About</a></li>
+                  <li class="menu-item"><a href="index.html" class="menu-link">How it is works</a></li>
+                  <li class="menu-item"><a href="index.html" class="menu-link">Our why </a></li>
                   <li class="menu-item first"><a href="./signin.html" style="color: #162C9B;" class="menu-link">Sign in</a></li>
                   <li class="menu-item first"><a  style="padding-left: 15px!important;" href="registration.html" class="signup">Sign up</a></li>
                 </ul>
