--- a/financial-advisor.html
+++ b/financial-advisor.html
@@ -189,9 +189,9 @@
       </div>
       <div>
           <ul class="menu" id="menu">
-              <li class="menu-item"><a href="#about-us" class="menu-link">About</a></li>
-              <li class="menu-item"><a href="#time-l" class="menu-link">How it is works</a></li>
-              <li class="menu-item"><a href="#moreonus" class="menu-link">Our why </a></li>
+              <li class="menu-item"><a href="index.html" class="menu-link">About</a></li>
+              <li class="menu-item"><a href="index.html" class="menu-link">How it is works</a></li>
+              <li class="menu-item"><a href="index.html" class="menu-link">Our why </a></li>
               <li class="menu-item first"><a href="./signin.html" style="color: #162C9B;" class="menu-link">Sign in</a></li>
               <li class="menu-item first"><a  style="padding-left: 15px!important;" href="registration.html" class="signup">Sign up</a></li>
             </ul>
@@ -321,14 +321,16 @@
                 <div class="form-group">
                   <label for="phone">Enter your phone number:</label> <br>
                   <img id="usa" src="./assets/images/US.png" alt="USA">
-                  <p class="numb-1">+1 </p> <input id="phone-number" type="tel" placeholder="012 345 678 910"
+                  <p class="numb-1">+1 </p> <input id="phone-number" type="tel" placeholder=" 345 678 2910"
                     class="form-control" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
                 </div>
 
                 <div class="form-group" id="buttons">
-                  <p style="color: #595959; text-align: left;">Profile Picture</p> <span
+                  <p style="color: #595959; text-align: left;">Profile Picture</p> 
+                  <div class="image"> <img  id="profileImage" src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80" class="rounded" width="51"> </div>
+                  <span
                     class=" btn btn-primary btn-file upload">
-                    Add photo<input type="file">
+                    Add photo<input id="imageUpload" type="file">
 
                   </span>
                   <a href="" class="btn" id="delete" style="color: white;"> Delete</a>
@@ -399,6 +401,21 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> 
   <script>
+    $("#profileImage").click(function(e) {
+    $("#imageUpload").click();
+});
+
+function fasterPreview( uploader ) {
+    if ( uploader.files && uploader.files[0] ){
+          $('#profileImage').attr('src', 
+             window.URL.createObjectURL(uploader.files[0]) );
+    }
+}
+
+$("#imageUpload").change(function(){
+    fasterPreview( this );
+});
+
           const burgerMenu = document.getElementById("burger");
 const navbarMenu = document.getElementById("menu");
 
