--- a/profile.html
+++ b/profile.html
@@ -168,39 +168,44 @@
 </head>
 
 <body class="my-login-page">
-  <header>
-    <nav class="navbar nav flex-row">
-      <div class="nav-menu">
-        <div class="nav-brand">
-          <img class="logo" src="./assets/images/logo.png" alt="Logo">
-        </div>
-      </div>
-      <div class="toggle-collapse">
-        <div class="toggle-icons text-black">
-          <!--<span><i class="fas fa-bars"></i></span>-->
-          <span class="icon"></span>
-        </div>
-      </div>
-      <div>
-        <ul class="nav-items flex-row">
-          <li class="nav-link">
-            <a href="#" class="text-black">About</a>
-          </li>
-          <li class="nav-link">
-            <a href="#" class="text-black">More on us</a>
-          </li>
-          <li class="nav-link">
-            <a href="#" class="text-black">How it works</a>
-          </li>
 
-        </ul>
+  <header>
+    <nav class="navbar">
+      <div class="navbrand">
+<img src="./assets/images/logo.png" alt="Logo">    
+    <div class="burger" id="burger">
+          <span class="burger-open">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="16">
+              <g fill="#252a32" fill-rule="evenodd">
+                <path d="M0 0h24v2H0zM0 7h24v2H0zM0 14h24v2H0z" />
+              </g>
+            </svg>
+          </span>
+          <span class="burger-close">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+              <path fill="#252a32" fill-rule="evenodd" d="M17.778.808l1.414 1.414L11.414 10l7.778 7.778-1.414 1.414L10 11.414l-7.778 7.778-1.414-1.414L8.586 10 .808 2.222 2.222.808 10 8.586 17.778.808z" />
+            </svg>
+          </span>
+        </div>
       </div>
       <div>
+          <ul class="menu" id="menu">
+              <li class="menu-item"><a href="index.html" class="menu-link">About</a></li>
+              <li class="menu-item"><a href="index.html" class="menu-link">How it is works</a></li>
+              <li class="menu-item"><a href="index.html" class="menu-link">Our why </a></li>
+              <button class="first profile-img"><img width="24px" height="24px" style="margin-right: 11px;float: left;"
+                src="./assets/images/user.png" alt="">Yagub Mehdiyev</button>
+    
+            </ul>
+      </div>
+      
+      <div class="second">
         <button class="profile-img"><img width="24px" height="24px" style="margin-right: 11px;float: left;"
-            src="./assets/images/user.png" alt="">Yagub Mehdiyev</button>
+          src="./assets/images/user.png" alt="">Yagub Mehdiyev</button>
 
       </div>
     </nav>
+  </nav>
 
   </header>
   <section id="cover" class="min-vh-100">
