--- a/registration.html
+++ b/registration.html
@@ -37,9 +37,9 @@
           </div>
           <div>
               <ul class="menu" id="menu">
-                  <li class="menu-item"><a href="#about-us" class="menu-link">About</a></li>
-                  <li class="menu-item"><a href="#time-l" class="menu-link">How it is works</a></li>
-                  <li class="menu-item"><a href="#moreonus" class="menu-link">Our why </a></li>
+                  <li class="menu-item"><a href="index.html" class="menu-link">About</a></li>
+                  <li class="menu-item"><a href="index.html" class="menu-link">How it is works</a></li>
+                  <li class="menu-item"><a href="index.html" class="menu-link">Our why </a></li>
                   <li class="menu-item first"><a href="./signin.html" style="color: #162C9B;" class="menu-link">Sign in</a></li>
                   <li class="menu-item first"><a  style="padding-left: 15px!important;" href="registration.html" class="signup">Sign up</a></li>
                 </ul>
@@ -89,9 +89,9 @@
         <div class="d-flex justify-content-between">
           <div>
             <ul class="footer-list">
-              <li> <a href="#">About Us</a> </li>
-              <li> <a href="#">More on us</a> </li>
-              <li> <a href="#">How it works</a> </li>
+              <li> <a href="index.html">About Us</a> </li>
+              <li> <a href="index.html">More on us</a> </li>
+              <li> <a href="index.html">How it works</a> </li>
             </ul></div>
             <div><p id="all-rights">© All Rights 2021</p></div>
         </div>
