--- a/profile.html
+++ b/profile.html
@@ -249,7 +249,7 @@
                   </div>
                 </div>
 
-                <div><label for="sel1">State*</label>
+                <div style="text-align:left"><label for="sel1">State*</label>
                   <select class="form-control" id="sel1" aria-placeholder="State">
                     <option>1</option>
                     <option>2</option>
