--- a/registration.html
+++ b/registration.html
@@ -85,18 +85,18 @@
         </div>
     </section>
     <!-- Footer Start -->
-    <footer>
-        <div class="d-flex justify-content-between">
+    <footer style="margin-top: 850px; background-color: white;">
+        <div style="display: flex; max-width: 1120px; margin:auto; justify-content: space-between;">
           <div>
             <ul class="footer-list">
-              <li> <a href="index.html">About Us</a> </li>
-              <li> <a href="index.html">More on us</a> </li>
-              <li> <a href="index.html">How it works</a> </li>
+              <li> <a href="#">About Us</a> </li>
+              <li> <a href="#">More on us</a> </li>
+              <li> <a href="#">How it works</a> </li>
             </ul></div>
             <div><p id="all-rights">© All Rights 2021</p></div>
         </div>
-        
-        </footer>
+      
+      </footer>
         <!--  Footer End -->
     <!--  Footer End -->
 
