--- a/financial-advisor.html
+++ b/financial-advisor.html
@@ -245,8 +245,8 @@
                   </div>
                 </div>
 
-                <div><label for="sel1">Region*</label>
-                  <select class="form-control" id="sel1" aria-placeholder="Region">
+                <div><label for="sel1">State*</label>
+                  <select class="form-control" id="sel1" aria-placeholder="State">
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -309,7 +309,7 @@
                   </div>
                 </div>
 
-                <div class="form-group"><label for="sel1">Region*</label>
+                <div class="form-group"><label for="sel1">State*</label>
                   <select class="form-control" id="sel1">
                     <option>1</option>
                     <option>2</option>
