--- a/profile.html
+++ b/profile.html
@@ -274,7 +274,33 @@
                     </div>
                   </div>
                 </div>
+                <div class="form-group">
+                  <label for="customRange2" class="form-label">Budget range*</label>
+                  <div class="range">
+                    <div class="sliderValue">
+                      <!-- <span style="color: black;">100</span> -->
+                    </div>
+                    <div class="field">
+                      <div>
+                        <p class="value left">0</p>
+                      </div>
+                      <div> <input style="float: left; align-items: center;margin-left: 40px; margin-right: 40px;" type="range" value="60000" min="0"
+                          max="100000" id="myRange" step="1" />
+                        steps="1"></div>
+                      <div>
+                        <p class="value right" style="margin-left:0px "> 100000</p>
+                      </div>
 
+
+
+
+
+                    </div>
+                    <p style="text-align: center; color: #162c9b!important; font-weight: bold;"> <span id="demo"></span>
+                    </p>
+
+                  </div>
+                </div>
                 <br>
 
                 <div class="form-group">
