--- a/advice-seekers.html
+++ b/advice-seekers.html
@@ -208,7 +208,7 @@
   <section id="cover" class="min-vh-100">
     <div id="cover-caption">
       <div class="container">
-        <div class="row text-white">
+        <div class="row ">
           <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
             <h1 class="display-4 py-2 ">Advice Seekers</h1>
             <div class="px-2">
@@ -282,31 +282,8 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="customRange2" class="form-label">Your salary range*</label>
-                  <div class="range">
-                    <div class="sliderValue">
-                      <!-- <span style="color: black;">100</span> -->
-                    </div>
-                    <div class="field">
-                      <div>
-                        <p class="value left">0</p>
-                      </div>
-                      <div> <input style="float: left; align-items: center;margin-left: 40px; margin-right: 40px;" type="range" value="60000" min="0"
-                          max="100000" id="myRange" step="1" />
-                        steps="1"></div>
-                      <div>
-                        <p class="value right" style="margin-left:0px "> 100000</p>
-                      </div>
-
-
-
-
-
-                    </div>
-                    <p style="text-align: center; color: #162c9b!important; font-weight: bold;"> <span id="demo"></span>
-                    </p>
-
-                  </div>
+                  <label for="points">Salary range*</label>
+                  <input type="number" id="points"  class="form-control" name="points" step="10000" min="0" max="100000">
                 </div>
 
                 <div style="text-align: left;" class="form-group"><label for="sel1">State*</label>
